# elastix

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  Dockerfile  ElastixConfig.cmake.in  ElastixConfigVersion.cmake.in  GOVERNANCE.md  NOTICE  README.md  UseElastix.cmake.in  appveyor.yml  pixi.toml
Common/: CMakeLists.txt  TypeList.h  elxDefaultConstruct.h  elxDefaultConstructibleSubclass.h  elxDeref.h  elxImageDomain.h  elxMaskHasSameImageDomain.h  elxSupportedImageDimensions.h  elxTimer.cxx  itkAdvancedLinearInterpolateImageFunction.h  itkAdvancedLinearInterpolateImageFunction.hxx  itkAdvancedRayCastInterpolateImageFunction.h  itkAdvancedRayCastInterpolateImageFunction.hxx  itkComputeDisplacementDistribution.h  itkComputeDisplacementDistribution.hxx  itkComputeImageExtremaFilter.h  itkComputeImageExtremaFilter.hxx  itkComputeJacobianTerms.h  itkComputeJacobianTerms.hxx  itkComputePreconditionerUsingDisplacementDistribution.h  itkComputePreconditionerUsingDisplacementDistribution.hxx  itkErodeMaskImageFilter.h  itkErodeMaskImageFilter.hxx  itkGenericMultiResolutionPyramidImageFilter.h  itkGenericMultiResolutionPyramidImageFilter.hxx  itkImageFileCastWriter.h  itkImageFileCastWriter.hxx  itkImageMaskSpatialObject2.h  itkImageMaskSpatialObject2.hxx  itkImageSpatialObject2.h  itkImageSpatialObject2.hxx  itkMeshFileReaderBase.h  itkMeshFileReaderBase.hxx  itkMultiOrderBSplineDecompositionImageFilter.h  itkMultiOrderBSplineDecompositionImageFilter.hxx  itkMultiResolutionGaussianSmoothingPyramidImageFilter.h  itkMultiResolutionGaussianSmoothingPyramidImageFilter.hxx  itkMultiResolutionImageRegistrationMethod2.h  itkMultiResolutionImageRegistrationMethod2.hxx  itkMultiResolutionShrinkPyramidImageFilter.h  (+16 more)
Common/CUDA/: CMakeLists.txt  cudaDeformationsKernel.cu  cudaInlineFunctions.h
Common/CostFunctions/: itkAdvancedImageToImageMetric.h  itkAdvancedImageToImageMetric.hxx  itkExponentialLimiterFunction.h  itkExponentialLimiterFunction.hxx  itkHardLimiterFunction.h  itkHardLimiterFunction.hxx  itkImageToImageMetricWithFeatures.h  itkImageToImageMetricWithFeatures.hxx  itkLimiterFunctionBase.h  itkMultiInputImageToImageMetricBase.h  itkMultiInputImageToImageMetricBase.hxx  itkParzenWindowHistogramImageToImageMetric.h  itkParzenWindowHistogramImageToImageMetric.hxx  itkScaledSingleValuedCostFunction.cxx  itkScaledSingleValuedCostFunction.h  itkSingleValuedPointSetToPointSetMetric.h  itkSingleValuedPointSetToPointSetMetric.hxx  itkTransformPenaltyTerm.h  itkTransformPenaltyTerm.hxx
Common/GTesting/: CMakeLists.txt  elxBaseComponentGTest.cxx  elxConversionGTest.cxx  elxDefaultConstructGTest.cxx  elxDefaultConstructibleSubclassGTest.cxx  elxElastixMainGTest.cxx  elxGTestUtilities.h  elxImpactMetricGTest.cxx  elxResampleInterpolatorGTest.cxx  elxResamplerGTest.cxx  elxTransformIOGTest.cxx  itkAdvancedImageToImageMetricGTest.cxx  itkAdvancedMeanSquaresImageToImageMetricGTest.cxx  itkComputeImageExtremaFilterGTest.cxx  itkCorrespondingPointsEuclideanDistancePointMetricGTest.cxx  itkGridScheduleComputerGTest.cxx  itkImageFileCastWriterGTest.cxx  itkImageFullSamplerGTest.cxx  itkImageGridSamplerGTest.cxx  itkImageMaskSpatialObject2GTest.cxx  itkImageRandomCoordinateSamplerGTest.cxx  itkImageRandomSamplerGTest.cxx  itkImageRandomSamplerSparseMaskGTest.cxx  itkImageSamplerGTest.cxx  itkParameterMapInterfaceTest.cxx  itkParzenWindowHistogramImageToImageMetricGTest.cxx
Common/ITK4Workaround/: itkComputeImageExtremaFilter.h
Common/ITK5Workaround/: itkMultiThreader.h
Common/ImageSamplers/: itkImageFullSampler.h  itkImageFullSampler.hxx  itkImageGridSampler.h  itkImageGridSampler.hxx  itkImageRandomCoordinateSampler.h  itkImageRandomCoordinateSampler.hxx  itkImageRandomSampler.h  itkImageRandomSampler.hxx  itkImageRandomSamplerBase.h  itkImageRandomSamplerBase.hxx  itkImageRandomSamplerSparseMask.h  itkImageRandomSamplerSparseMask.hxx  itkImageReducedFullSampler.h  itkImageReducedFullSampler.hxx  itkImageSample.h  itkImageSamplerBase.h  itkImageSamplerBase.hxx  itkImageToVectorContainerFilter.h  itkImageToVectorContainerFilter.hxx  itkMultiInputImageRandomCoordinateSampler.h  itkMultiInputImageRandomCoordinateSampler.hxx  itkVectorContainerSource.h  itkVectorContainerSource.hxx  (+2 more)
Core/: CMakeLists.txt  elxGitRevisionInfo.h.in  elxProgressCommand.cxx  elxProgressCommand.h  elxVersionMacros.h.in
Testing/: CMakeLists.txt  OpenCLBufferTest.cl  OpenCLEventTest.cl  OpenCLImageTest.cl  OpenCLKernelToImageBridgeTest.cl  OpenCLSimpleTest1.cl  OpenCLSimpleTest2.cl  OpenCLVectorTest.cl  elxComputeOverlap.cxx  elxImageCompare.cxx  elxInvertTransform.cxx  elxTransformParametersCompare.cxx  elx_compare_landmarks.py  elx_compare_overlap.py  elx_get_checksum_list.py  elx_get_tp_list.py  elx_nightly_dashboard.py  itkAccumulateDerivativesParallellizationTest.cxx  itkAdvanceOneStepParallellizationTest.cxx  itkAdvancedBSplineDeformableTransformTest.cxx  itkAdvancedLinearInterpolatorTest.cxx  itkAdvancedRecursiveBSplineTransformTest.cxx  itkBSplineDerivativeKernelFunctionTest.cxx  itkBSplineInterpolationDerivativeWeightFunctionTest.cxx  itkBSplineInterpolationSODerivativeWeightFunctionTest.cxx  itkBSplineInterpolationWeightFunctionTest.cxx  itkBSplineJacobianGradientPerformanceTest.cxx  itkBSplineSODerivativeKernelFunctionTest.cxx  itkBSplineSecondOrderDerivativeKernelFunction.h  itkBSplineTransformPointPerformanceTest.cxx  itkCommandLineArgumentParser.cxx  itkCommandLineArgumentParser.h  itkCompareCompositeTransformsTest.cxx  itkGPUBSplineDecompositionImageFilterTest.cxx  itkGPUCastImageFilterTest.cxx  itkGPUFactoriesTest.cxx  itkGPUGenericMultiResolutionPyramidImageFilterTest.cxx  itkGPURecursiveGaussianImageFilterTest.cxx  itkGPUResampleImageFilterTest.cxx  itkGPUShrinkImageFilterTest.cxx  (+30 more)
src/: CMakeLists.txt  CTestConfig.cmake  CopyrightElastix.txt  FindOpenCL.cmake  NOTICE  UseElastix.cmake.in  elastixOpenCL.cmake  elastixUncrustify.cfg  elastixUncrustify.py  runelastixlinux  runtransformixlinux
(+4022 files in other folders)
